<resources>
    <string name="app_name">LowesProject</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_show_detail">Tv Show Details</string>
    <string name="home_search_series_by_name">Search by name</string>
    <string name="home_search_button">Search</string>
    <string name="home_empty_state_message">No Results :(</string>
    <string name="tv_show_detail_genres_string">Genres: %1$s</string>
    <string name="tv_show_detail_schedule_string">Time: %1$s\nDays: %2$s</string>
    <string name="season_header_title">Season&#160;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="episode_deatil_number">Episode: %1$s</string>
    <string name="episode_deatil_season">Season: %1$s</string>
    <string name="favorite_empty_state">No Favorites yet :(</string>
    <string name="favorite_message">Added to favorites</string>
    <string name="unfavorite_message">Removed from favorites</string>
</resources>