<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <EditText
        android:id="@+id/search_serie_by_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/home_search_series_by_name"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/home_margin"
        android:drawableStart="@drawable/ic_baseline_search_24"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_search_button"
        android:layout_margin="@dimen/home_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_empty_state_message"
        android:visibility="gone"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tv_show_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_serie_by_name"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/tv_show_list_item"/>
</androidx.constraintlayout.widget.ConstraintLayout>